# iron_insights

./: .gitignore  ARROW_OPTIMIZATION.md  Cargo.toml  DEBUG_GUIDE.md  DUCKDB_INTEGRATION.md  README.md  TODO.md  WEIGHT_CLASS_INTEGRATION.md  improvements.md  iron_insights_redesign_v2.html  ironscale.html  package-lock.json  package.json  perf.md  rollup.config.js  rollup.config.ts  todo.md  tsconfig.json  ux_todo.md
.claude/: settings.json  settings.local.json
.github/workflows/: android-ci.yml  android-release.yml  refresh-data-and-deploy.yml
android/: .gitignore  README.md  RELEASING.md  TODO.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/com.gregorycarnegie.ironinsights.data.db.IronInsightsDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
app/: .gitignore  Cargo.toml  README.md  index.html  robots.txt  sitemap.xml  sync-data.ps1  todo.md  trunk.toml
app/assets/: base.css  components.css  layout.css  pages.css  style.css
app/landing/: bench-press-percentile.html  deadlift-percentile.html  faq.html  help-make-it-better.html  index.html  landing.css  methodology.html  powerlifting-standards-men-women.html  squat-percentile.html  tested-vs-untested.html  total-percentile.html
app/src/: core.rs  main.rs  webapp.rs
app/src/webapp/: app.rs  charts.rs  cross_sex.rs  data.rs  helpers.rs  logging.rs  mod.rs  models.rs  persistence.rs  selectors.rs  share.rs  slices.rs  state.rs  ui.rs
app/src/webapp/components/: bodyfat.rs  bodyweight_conditioned.rs  charts_panel.rs  cohort_comparison.rs  compare_mode.rs  cross_sex_charts.rs  cross_sex_panel.rs  distribution_controls.rs  distribution_diagnostics.rs  faq.rs  logo.rs  meet_day.rs  men_vs_women.rs  men_vs_women_page.rs  methodology_box.rs  mod.rs  nerds.rs  nerds_page.rs  onboarding.rs  one_rep_max.rs  one_rm.rs  one_rm_page.rs  percentile.rs  percentile_ladder.rs  plate_calc.rs  plate_calc_page.rs  progress.rs  ranking.rs  ranking_page.rs  rarity_panel.rs  result_card.rs  shared.rs  simulator.rs  trends.rs
crates/iron-core/: Cargo.toml
crates/iron-core/src/: arrow_utils.rs  cache.rs  config.rs  data.rs  duckdb_analytics.rs  filters.rs  lib.rs  models.rs  scoring.rs  viz.rs
crates/iron-scoring/: Cargo.toml
crates/iron-scoring/src/: lib.rs
crates/iron-server/: Cargo.toml
crates/iron-server/src/: handlers.rs  http3_server.rs  lib.rs  macros.rs  main.rs  share_card.rs  websocket.rs  websocket_arrow.rs
crates/iron-ui/: Cargo.toml
crates/iron-ui/src/: about_page.rs  donate_page.rs  home_page.rs  lib.rs  onerepmax_page.rs  rankings_page.rs  sharecard_page.rs
crates/iron-ui/src/components/: charts.rs  controls.rs  head.rs  header.rs
crates/iron-ui/src/components/scripts/: init.rs  main.rs  mod.rs
crates/iron-ui/src/components/styles/: base.rs  components.rs  layout.rs  tables.rs  theme.rs
crates/iron-wasm/: Cargo.toml
crates/iron-wasm/src/: lib.rs
data/: latest.json
data/v2026-02-28/: index.json
data/v2026-02-28/index_shards/f/all/: index.json
data/v2026-02-28/index_shards/f/multi-ply/: index.json
data/v2026-02-28/index_shards/f/raw/: index.json
data/v2026-02-28/index_shards/f/single-ply/: index.json
data/v2026-02-28/index_shards/f/straps/: index.json
data/v2026-02-28/index_shards/f/unlimited/: index.json
data/v2026-03-01/: index.json
data/v2026-03-03/: index.json
data/v2026-03-04/: index.json
data/v2026-03-06/: index.json
data/v2026-03-07/: index.json  trends.json
data/v2026-03-08/: index.json  trends.json
data/v2026-03-09/: index.json  trends.json
data/v2026-03-10/: index.json  trends.json
data/v2026-03-12/: index.json  trends.json
data/v2026-03-13/: index.json  trends.json
data/v2026-03-14/: index.json  trends.json
data/v2026-03-15/: index.json  trends.json
data/v2026-03-19/: index.json  trends.json
data/v2026-03-20/: index.json  trends.json
data/v2026-03-22/: index.json  trends.json
data/v2026-03-29/: index.json  trends.json
data/v2026-04-05/: index.json  trends.json
data/v2026-04-12/: index.json  trends.json
data/v2026-04-13/: index.json
data/v2026-04-14/: index.json
data/v2026-04-18/: index.json
data/v2026-04-19/: index.json
docs/: ARROW_OPTIMIZATION.md
iron_insights_core/: Cargo.toml
iron_insights_core/src/: lib.rs  published_contract.rs
pipeline/: .gitignore  Cargo.toml  README.md
pipeline/src/: lib.rs
scripts/: copy-assets.js  copy-assets.ts  qa.ps1  qa.sh  summarize_reports.ps1  test-build.ts  test-bun-build.ts  test_http3.ps1
src/: arrow_utils.rs  binary_counts.rs  cache.rs  config.rs  data.rs  debug_dots.rs  duckdb_analytics.rs  filters.rs  handlers.rs  http3_server.rs  lib.rs  main.rs  models.rs  percentiles.rs  rebin.rs  scoring.rs  share_card.rs  ui.rs  viz.rs  websocket.rs  websocket_arrow.rs
src/assets/: arrow-entry.js  arrow-entry.ts  plotly-entry.js  plotly-entry.ts
src/ui/: about_page.rs  donate_page.rs  home_page.rs  mod.rs  onerepmax_page.rs  rankings_page.rs  sharecard_page.rs
src/ui/components/: charts.rs  controls.rs  head.rs  header.rs  metrics.rs  mod.rs  realtime.rs  scripts.rs  share_card.rs  styles.rs
src/ui/components/scripts/: calculations.rs  charts.rs  data.rs  init.rs  main.rs  mod.rs  ui.rs  utils.rs  websocket.rs
src/ui/components/styles/: base.rs  charts.rs  components.rs  layout.rs  mod.rs  responsive.rs  tables.rs  theme.rs
src/wasm/: Cargo.toml  lib.rs
static/: sw.js
static/js/: app-entry.js  app-entry.ts  lazy-loader.js  lazy-loader.ts
static/js/app/: ambient.d.ts  calculations.js  calculations.ts  charts.js  charts.ts  data.js  data.ts  globals.d.ts  init.js  init.ts  main.js  main.ts  types.ts  ui.js  ui.ts  utils.js  utils.ts  websocket.js  websocket.ts
static/wasm/: .gitignore  iron_insights_wasm.d.ts  iron_insights_wasm.js  iron_insights_wasm_bg.wasm  iron_insights_wasm_bg.wasm.d.ts  package.json
tests/: benchmarks.rs  cache_tests.rs  duckdb_analytics_tests.rs  http3_integration_test.rs  integration_tests.rs  percentiles_tests.rs  scoring_tests.rs
(+159459 files in other folders)
