[package]
name = "iron_insights"
version = "0.10.0"
edition = "2024"

[dependencies]
# Ultra-fast web framework
axum = { version = "0.8.4", features = ["macros", "ws"] }
tokio = { version = "1.47.1", features = ["full"] }

# HTML templating with compile-time safety
maud = { version = "0.27.0", features = ["axum"] }

# WebSocket support
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Streaming support
tokio-stream = "0.1.17"
bytes = "1.10.1"

# Real-time messaging
dashmap = "6.1.0"

# Data processing - use a stable version with correct features
polars = { version = "0.51.0", features = [
    "lazy", "csv", "parquet",
    "temporal", "strings", "dtype-date",
    "dtype-categorical"
] }

# In-process SQL analytics engine
duckdb = { version = "1.4.0", features = ["parquet"] }

# For timestamps in Parquet file names
chrono = { version = "0.4.42", features = ["serde"] }

# SIMD-optimized math
rayon = "1.11.0"
wide = "0.7.33"

# Random number generation
rand = "0.9.2"
rand_distr = "0.5.1"

# Efficient serialization
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

# Performance optimizations
lazy_static = "1.5.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Apache Arrow for binary data serialization
arrow = "56.1.0"
arrow-ipc = "56.1.0"
arrow-flight = { version = "56.1.0", features = ["flight-sql-experimental"] }

# gRPC support for Arrow Flight
tonic = "0.14.2"
prost = "0.14.1"
flatbuffers = "25.2.10"

# Caching
moka = { version = "0.12.10", features = ["future"] }

# HTTP client for downloading data
reqwest = { version = "0.12.23", features = ["stream"] }

# HTML parsing for revision checking
scraper = "0.24.0"

# Zip extraction
zip = "5.1.1"

# Static file serving
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "compression-br", "compression-gzip", "trace"] }

# HTTP/3 and QUIC support - basic QUIC without TLS complications
# Using specific versions for compatibility - don't upgrade until v0.11.10
quinn = { version = "=0.11.8", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }
rcgen = { version = "0.14.4", features = ["crypto"] }

[dev-dependencies]
# Testing dependencies for HTTP/3
reqwest = { version = "0.12.23", features = ["stream"] }

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary
strip = true            # Remove debug symbols