[workspace]
resolver = "2"
members = [
    "crates/iron-core",
    "crates/iron-scoring",
    "crates/iron-ui",
    "crates/iron-server",
    "crates/iron-wasm",
]

[workspace.package]
version = "0.11.0"
edition = "2024"
authors = ["Gregory Carnegie"]
license = "MIT"

# Shared dependencies across workspace
[workspace.dependencies]
# Core data structures
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

# Web framework
axum = { version = "0.8.6", features = ["macros", "ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "compression-br", "compression-gzip", "trace"] }

# HTML templating
maud = { version = "0.27.0", features = ["axum"] }

# Data processing (heavy dependencies)
polars = { version = "0.51.0", features = [
    "lazy", "csv", "parquet",
    "temporal", "strings", "dtype-date",
    "dtype-categorical"
] }
duckdb = { version = "1.4.1", features = ["parquet"] }

# Apache Arrow
arrow = "57.0.0"
arrow-ipc = "57.0.0"
arrow-flight = { version = "57.0.0", features = ["flight-sql-experimental"] }

# gRPC for Arrow Flight
tonic = "0.14.2"
prost = "0.14.1"
flatbuffers = "25.9.23"

# WebSocket
tokio-tungstenite = "0.28.0"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Streaming
tokio-stream = "0.1.17"
bytes = "1.10.1"

# Performance
rayon = "1.11.0"
wide = "0.8.1"
lazy_static = "1.5.0"
moka = { version = "0.12.11", features = ["future"] }

# HTTP client
reqwest = { version = "0.12.24", features = ["stream"] }

# Utilities
scraper = "0.24.0"
zip = "6.0.0"
rand = "0.9.2"
rand_distr = "0.5.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# HTTP/3 QUIC
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
quinn-proto = "0.11.13"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23.34", default-features = false, features = ["ring"] }
rcgen = { version = "0.14.5", features = ["crypto"] }

# WebAssembly
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Internal workspace crates
iron-core = { path = "crates/iron-core" }
iron-scoring = { path = "crates/iron-scoring" }
iron-ui = { path = "crates/iron-ui" }
iron-server = { path = "crates/iron-server" }

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary
strip = true            # Remove debug symbols

[profile.dev]
# Faster compile times in development
opt-level = 1           # Some optimization for dependencies
incremental = true      # Enable incremental compilation

# Speed up compilation for dev dependencies (mainly proc macros)
[profile.dev.package."*"]
opt-level = 2
