[workspace]
members = ["app", "app2", "pipeline", "iron_insights_core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[package]
name = "iron_insights"
version = "0.1.0"
edition = "2024"

[dependencies]
