[package]
name = "iron_insights_app"
version.workspace = true
edition.workspace = true

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
js-sys = "0.3.91"
leptos = { version = "0.8.17", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
  "Clipboard",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "History",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Location",
  "Navigator",
  "Storage",
  "UrlSearchParams",
  "Window"
] }
