[package]
name = "ironscale"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
iron_insights_core = { path = "../iron_insights_core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.7.0"
gloo-timers = "0.4.0"
js-sys = "0.3.95"
leptos = { version = "0.8.19", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = [
  "CanvasGradient",
  "Clipboard",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "History",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Location",
  "Navigator",
  "Storage",
  "UrlSearchParams",
  "Window"
] }
