[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.58", features = ["derive"] }
polars = { version = "0.53.0", default-features = false, features = ["lazy", "csv", "parquet", "dtype-categorical", "strings", "temporal"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
