[package]
name = "pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
# Pinned for Polars compatibility; do not bump independently.
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
# Pinned for Polars compatibility; do not bump independently.
clap = { version = "4.5.58", features = ["derive"] }
polars = { version = "0.53.0", default-features = false, features = ["lazy", "csv", "parquet", "dtype-categorical", "strings", "temporal"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { version = "8.3.1", default-features = false, features = ["deflate"] }
