[package]
name = "iron-ui"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies
iron-core.workspace = true
iron-scoring.workspace = true

# HTML templating
maud.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time for UI components
chrono.workspace = true

[lib]
name = "iron_ui"
path = "src/lib.rs"
