[package]
name = "iron-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Internal dependencies
iron-scoring.workspace = true

# WebAssembly
wasm-bindgen.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
